# dotfiles

./: .bashrc  .editrc  .fzf_functions.bash  .gitconfig  .gitignore  .gitignore_global  .inputrc  .lldbinit  .rgignore  .tmux.conf  .vimrc  .zshrc  README.md  gtk.css  nightly_fox.txt  powlevel9k_conf.zsh  setup.sh
alacritty/: alacritty.yml
alacritty/.config/: alacritty.yml
asynctasks/: catkin_tasks.ini  global_tasks.ini
autoload/: catkin.vim  markdown_vimwiki.vim
bash_scripts/: catkin_init.bash  cclangd  fzf_functions.bash  gnome-sushi-preview.sh  login.py  login.sh  minimise_except.py  set_wallpaper.bash  set_wallpaper_pop  wechat_with_modified_wmname  which_terminal.sh
clashy/: hitun-config.yaml
custom_css/highlight/: solarized-light.css
custom_css/markdown/: github-markdown.css  lixiaolai.css  solarized-light.css  solarized.css  (+1 more)
ftplugin/: cmake.vim  cpp.vim  fzf.vim  markdown.vim  python.vim  vimwiki.vim
git/: .gitconfig  .gitignore_global
kitty/: ayu_mirage.conf  kitty.conf
lazygit/: config.yml
logiops/: logid.cfg
nvim/.config/nvim/locals/cmp-zi/: Cargo.toml
nvim/.config/nvim/locals/cmp-zi/lua/cmp/: zi.lua
nvim/.config/nvim/locals/cmp-zi/src/: lib.rs  main.rs
python_scripts/: unzip_cn.py
ranger/: commands.py  rc.conf  rifle.conf
taskwarrior/: .taskopenrc  .taskrc
tealdeer/: config.toml
tmux/: .tmux.conf
vimrc/: .vimrc  abbrev.vim  autocmd.vim  catkin-coc-settings.json  coc-settings.json  color.vim  general.vim  keymap.vim  leadermap.vim  neovim.vim  plugin.vim  statusline.vim  whitespace_check.vim
zsh/: .zprofile  .zshenv
(+262 files in other folders)
