[package]
name = "cmp-zi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
csv-async = {version = "1", features = ["tokio"]}
nvim-rs = { version = "0.4", features = ["use_tokio"]}
async-trait = "0.1"
